fix: z-index timeline tick bug

--- a/@twal/styles/base/nav.scss
+++ b/@twal/styles/base/nav.scss
@@ -11,6 +11,7 @@
   background: $bg-color;
   border: $border-size solid $border-color;
   box-sizing: content-box;
+  z-index: 2;
 }
 
 @mixin tickround($bg-color: $primarycolor, $border-color: $light) {
@@ -42,6 +43,7 @@
   border-radius: 4px;
   @include tick($bg-color, $border-color);
 }
+
 .timeline {
   li {
     &:before {
@@ -52,6 +54,7 @@
       left: 59px;
       display: inline-block;
       border-right: 3px solid $grey;
+      z-index: 1;
     }
     .submenu-link {
       &:before {
